ensuring encoding is consistent

--- a/backend/data_exploration.ipynb
+++ b/backend/data_exploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 138,
    "id": "235bc022",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 139,
    "id": "cc54aed6",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 140,
    "id": "251b191b",
    "metadata": {},
    "outputs": [],
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 141,
    "id": "e849e6c5",
    "metadata": {},
    "outputs": [
@@ -1905,21 +1905,28 @@
       "3   4     2  1|bld       4.79  0.802184    stnwg        3      m    b       4   \n",
       "4   5     2  1|bld       6.68  0.485009    sedan        3      m    c       1   \n",
       "\n",
-      "   ... e_bill  time_of_week_driven  time_driven trm_len credit_score  \\\n",
-      "0  ...      0              weekday   12pm - 6pm       6   646.516469   \n",
-      "1  ...      0              weekend   6am - 12pm      12   635.400369   \n",
-      "2  ...      0              weekday   6am - 12pm      12   646.463131   \n",
-      "3  ...      1              weekday   6pm - 12am      12   645.598794   \n",
-      "4  ...      0              weekday   6am - 12pm      12   657.348612   \n",
+      "   ... time_of_week_driven  time_driven  trm_len credit_score  \\\n",
+      "0  ...             weekday   12pm - 6pm        6   646.516469   \n",
+      "1  ...             weekend   6am - 12pm       12   635.400369   \n",
+      "2  ...             weekday   6am - 12pm       12   646.463131   \n",
+      "3  ...             weekday   6pm - 12am       12   645.598794   \n",
+      "4  ...             weekday   6am - 12pm       12   657.348612   \n",
       "\n",
-      "   low_education_ind clm numclaims    claimcst0  expected_loss  \n",
-      "0                0.0   1         1  2023.198184    5585.998969  \n",
-      "1                0.0   1         1  3600.172234    5695.859540  \n",
-      "2                0.0   1         1  2021.144067    5500.307127  \n",
-      "3                0.0   1         1  4006.845492    4994.920513  \n",
-      "4                0.0   1         1  2542.953931    5243.106060  \n",
+      "  low_education_ind  clm numclaims    claimcst0  claim_cst_per_exposure  \\\n",
+      "0               0.0    1         1  2023.198184             5585.998969   \n",
+      "1               0.0    1         1  3600.172234             5695.859540   \n",
+      "2               0.0    1         1  2021.144067             5500.307127   \n",
+      "3               0.0    1         1  4006.845492             4994.920513   \n",
+      "4               0.0    1         1  2542.953931             5243.106060   \n",
       "\n",
-      "[5 rows x 25 columns]\n"
+      "   expected_loss  \n",
+      "0    5585.998969  \n",
+      "1    5695.859540  \n",
+      "2    5500.307127  \n",
+      "3    4994.920513  \n",
+      "4    5243.106060  \n",
+      "\n",
+      "[5 rows x 26 columns]\n"
      ]
     }
    ],
@@ -1929,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 142,
    "id": "463152e2",
    "metadata": {},
    "outputs": [
@@ -1981,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 143,
    "id": "db71c903",
    "metadata": {},
    "outputs": [],
@@ -2012,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 144,
    "id": "4536f6dc",
    "metadata": {},
    "outputs": [],
@@ -2048,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 145,
    "id": "188ab3a0",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 146,
    "id": "e12ef7e4",
    "metadata": {},
    "outputs": [],
@@ -2248,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 147,
    "id": "334d6868",
    "metadata": {},
    "outputs": [],
@@ -2274,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 148,
    "id": "cef2c679",
    "metadata": {},
    "outputs": [
@@ -2378,32 +2385,32 @@
     }
    ],
    "source": [
-    "# Creating final training datasets\n",
+    "# Creating rf dataset\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
-    "X_train_final = X_bef_enc[possible_predictors].copy()\n",
-    "y_train_final = df_sub[['claimcst0', 'numclaims', 'clm', 'exposure']].copy()\n",
+    "X_train_rf = X_bef_enc[possible_predictors].copy()\n",
+    "y_train_rf = df_sub[['claimcst0', 'numclaims', 'clm', 'exposure']].copy()\n",
     "\n",
-    "cat_cols = X_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "cat_cols = X_train_rf.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "print(f\"Categorical features to encode: {cat_cols}\")\n",
     "\n",
     "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
     "\n",
-    "X_train_final[cat_cols] = encoder.fit_transform(X_train_final[cat_cols])\n",
+    "X_train_rf[cat_cols] = encoder.fit_transform(X_train_rf[cat_cols])\n",
     "\n",
-    "print(\"Final Training Shape:\", X_train_final.shape)\n",
+    "print(\"Final Training Shape:\", X_train_rf.shape)\n",
     "\n",
     "print(\"Category Value Counts\")\n",
     "for col in cat_preds:\n",
     "    print(f\"\\nVariable: {col}\")\n",
-    "    print(X_train_final[col].value_counts().sort_index())\n",
+    "    print(X_train_rf[col].value_counts().sort_index())\n",
     "\n",
-    "train_df_final = X_train_final.join(y_train_final)"
+    "train_df_rf = X_train_rf.join(y_train_rf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 149,
    "id": "7489f04f",
    "metadata": {},
    "outputs": [
@@ -2594,18 +2601,18 @@
        "4          1    1  0.485009  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df_final.head()"
+    "train_df_rf.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 150,
    "id": "893d00ee",
    "metadata": {},
    "outputs": [
@@ -2645,9 +2652,9 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "X_rf = train_df_final[possible_predictors].copy()\n",
-    "y = train_df_final['claimcst0'].copy()\n",
-    "w = train_df_final['exposure'].copy()\n",
+    "X_rf = train_df_rf[possible_predictors].copy()\n",
+    "y = train_df_rf['claimcst0'].copy()\n",
+    "w = train_df_rf['exposure'].copy()\n",
     "\n",
     "rf = RandomForestRegressor(\n",
     "    n_estimators=100,\n",
@@ -2687,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 151,
    "id": "6cb2d4e7",
    "metadata": {},
    "outputs": [],
@@ -2717,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 152,
    "id": "9110f119",
    "metadata": {},
    "outputs": [
@@ -3044,7 +3051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 153,
    "id": "af75de61",
    "metadata": {},
    "outputs": [
@@ -3242,7 +3249,7 @@
        "4    1  0.485009  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3250,6 +3257,8 @@
    "source": [
     "# Creating final validation datasets\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
     "\n",
     "df_train = model_data[model_data['sample'] == '1|bld'].copy()\n",
     "\n",
@@ -3262,8 +3271,6 @@
     "cat_cols = X_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "print(f\"Categorical features to encode: {cat_cols}\")\n",
     "\n",
-    "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
-    "\n",
     "X_train_final[cat_cols] = encoder.fit_transform(X_train_final[cat_cols])\n",
     "\n",
     "train_df_final = X_train_final.join(y_train_final)\n",
@@ -3272,7 +3279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 154,
    "id": "aaa105d6",
    "metadata": {},
    "outputs": [
@@ -3470,7 +3477,7 @@
        "24          1    1  0.401096  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3490,8 +3497,6 @@
     "cat_cols = X_val_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "print(f\"Categorical features to encode: {cat_cols}\")\n",
     "\n",
-    "encoder = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1)\n",
-    "\n",
     "X_val_final[cat_cols] = encoder.fit_transform(X_val_final[cat_cols])\n",
     "\n",
     "val_df_final = X_val_final.join(y_val_final)\n",
@@ -3499,8 +3504,293 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "ff0be36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inf_df = pd.read_csv('../backend/inference_data_cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "1d0ffc29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = [\n",
+    "    'driving_history_score',\n",
+    "    'credit_score',\n",
+    "    'low_education_ind',\n",
+    "    'marital_status',\n",
+    "    'time_driven',\n",
+    "    'area',\n",
+    "    'agecat_grouped',\n",
+    "    'gender',\n",
+    "    'veh_color',\n",
+    "    'max_power',\n",
+    "    'engine_type',\n",
+    "    'veh_age',\n",
+    "    'veh_body_grouped',\n",
+    "    'veh_value'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "e9b58241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical features to encode: ['marital_status', 'time_driven', 'area', 'agecat_grouped', 'gender', 'veh_color', 'engine_type', 'veh_body_grouped']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>driving_history_score</th>\n",
+       "      <th>credit_score</th>\n",
+       "      <th>low_education_ind</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>time_driven</th>\n",
+       "      <th>area</th>\n",
+       "      <th>agecat_grouped</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>veh_color</th>\n",
+       "      <th>max_power</th>\n",
+       "      <th>engine_type</th>\n",
+       "      <th>veh_age</th>\n",
+       "      <th>veh_body_grouped</th>\n",
+       "      <th>veh_value</th>\n",
+       "      <th>exposure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8295</td>\n",
+       "      <td>81</td>\n",
+       "      <td>644.721808</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>0.777085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17625</td>\n",
+       "      <td>94</td>\n",
+       "      <td>634.306196</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>0.528369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3802</td>\n",
+       "      <td>77</td>\n",
+       "      <td>649.245139</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.18</td>\n",
+       "      <td>0.384591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12865</td>\n",
+       "      <td>59</td>\n",
+       "      <td>647.594655</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>0.116378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6495</td>\n",
+       "      <td>81</td>\n",
+       "      <td>657.550500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>0.688417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  driving_history_score  credit_score  low_education_ind  \\\n",
+       "0   8295                     81    644.721808                  0   \n",
+       "1  17625                     94    634.306196                  0   \n",
+       "2   3802                     77    649.245139                  0   \n",
+       "3  12865                     59    647.594655                  0   \n",
+       "4   6495                     81    657.550500                  0   \n",
+       "\n",
+       "   marital_status  time_driven  area  agecat_grouped  gender  veh_color  \\\n",
+       "0             1.0          2.0   0.0             1.0     1.0        6.0   \n",
+       "1             1.0          1.0   0.0             2.0     0.0        7.0   \n",
+       "2             0.0          3.0   3.0             1.0     0.0        8.0   \n",
+       "3             1.0          2.0   3.0             1.0     1.0        3.0   \n",
+       "4             1.0          2.0   2.0             1.0     0.0        4.0   \n",
+       "\n",
+       "   max_power  engine_type  veh_age  veh_body_grouped  veh_value  exposure  \n",
+       "0        128          2.0        3               4.0       6.36  0.777085  \n",
+       "1        178          0.0        1               3.0       2.56  0.528369  \n",
+       "2        270          3.0        4               1.0       6.18  0.384591  \n",
+       "3        120          3.0        3               4.0       6.49  0.116378  \n",
+       "4         94          3.0        2               2.0       6.46  0.688417  "
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "inf_df['veh_body_grouped'] = inf_df['veh_body'].apply(group_vehicle_body)\n",
+    "inf_df['agecat_grouped'] = inf_df['agecat'].apply(group_age_category)\n",
+    "\n",
+    "X = inf_df[['id'] + predictors].copy()\n",
+    "y = inf_df[['exposure']].copy()\n",
+    "\n",
+    "cat_cols = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "print(f\"Categorical features to encode: {cat_cols}\")\n",
+    "\n",
+    "X[cat_cols] = encoder.fit_transform(X[cat_cols])\n",
+    "\n",
+    "inf_df_final = X.join(y)\n",
+    "inf_df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "dd5c7ee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marital_status': {'M': 0, 'S': 1},\n",
+       " 'time_driven': {'12am - 6 am': 0,\n",
+       "  '12pm - 6pm': 1,\n",
+       "  '6am - 12pm': 2,\n",
+       "  '6pm - 12am': 3},\n",
+       " 'area': {'A': 0, 'B': 1, 'C': 2, 'D': 3, 'E': 4, 'F': 5},\n",
+       " 'agecat_grouped': {'Elder': 0, 'Middle': 1, 'Young': 2},\n",
+       " 'gender': {'F': 0, 'M': 1},\n",
+       " 'veh_color': {'black': 0,\n",
+       "  'blue': 1,\n",
+       "  'brown': 2,\n",
+       "  'gray': 3,\n",
+       "  'green': 4,\n",
+       "  'red': 5,\n",
+       "  'silver': 6,\n",
+       "  'white': 7,\n",
+       "  'yellow': 8},\n",
+       " 'engine_type': {'dissel': 0, 'electric': 1, 'hybrid': 2, 'petrol': 3},\n",
+       " 'veh_body_grouped': {'COUPE': 0,\n",
+       "  'OTHER': 1,\n",
+       "  'SEDAN': 2,\n",
+       "  'STNWG': 3,\n",
+       "  'SUV': 4,\n",
+       "  'TRUCK': 5,\n",
+       "  'UTE': 6}}"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoding_map = {}\n",
+    "\n",
+    "for col_name, categories in zip(cat_cols, encoder.categories_):\n",
+    "    mapping = {category: code for code, category in enumerate(categories)}\n",
+    "    encoding_map[col_name] = mapping\n",
+    "\n",
+    "encoding_map\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "b7618a0d",
+   "id": "18409d00",
    "metadata": {},
    "source": [
     "## Save Altered Data"
@@ -3519,13 +3809,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 159,
    "id": "eccef3d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df_final.to_csv('../backend/train_df_final.csv', index=False)\n",
     "val_df_final.to_csv('../backend/val_df_final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "7ec93565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inf_df_final.to_csv('../backend/inf_df_final.csv', index=False)"
    ]
   }
  ],
