--- a/backend/prep_inference_data.ipynb
+++ b/backend/prep_inference_data.ipynb
@@ -286,6 +286,56 @@
    "source": [
     "inf_df_final.to_csv('../backend/inf_df_final.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marital_status': {'M': 0, 'S': 1},\n",
+       " 'time_driven': {'12am - 6 am': 0,\n",
+       "  '12pm - 6pm': 1,\n",
+       "  '6am - 12pm': 2,\n",
+       "  '6pm - 12am': 3},\n",
+       " 'area': {'A': 0, 'B': 1, 'C': 2, 'D': 3, 'E': 4, 'F': 5},\n",
+       " 'agecat_grouped': {'Elder': 0, 'Middle': 1, 'Young': 2},\n",
+       " 'gender': {'F': 0, 'M': 1},\n",
+       " 'veh_color': {'black': 0,\n",
+       "  'blue': 1,\n",
+       "  'brown': 2,\n",
+       "  'gray': 3,\n",
+       "  'green': 4,\n",
+       "  'red': 5,\n",
+       "  'silver': 6,\n",
+       "  'white': 7,\n",
+       "  'yellow': 8},\n",
+       " 'engine_type': {'dissel': 0, 'electric': 1, 'hybrid': 2, 'petrol': 3},\n",
+       " 'veh_body_grouped': {'COUPE': 0,\n",
+       "  'OTHER': 1,\n",
+       "  'SEDAN': 2,\n",
+       "  'STNWG': 3,\n",
+       "  'SUV': 4,\n",
+       "  'TRUCK': 5,\n",
+       "  'UTE': 6}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoding_map = {}\n",
+    "\n",
+    "for col_name, categories in zip(cat_cols, encoder.categories_):\n",
+    "    mapping = {category: code for code, category in enumerate(categories)}\n",
+    "    encoding_map[col_name] = mapping\n",
+    "\n",
+    "encoding_map\n"
+   ]
   }
  ],
  "metadata": {
