save xgb model for api integration

--- a/backend/TEMP_model_implementation.ipynb
+++ b/backend/TEMP_model_implementation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "ec9ef138",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "30b63007",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "b947c59f",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "59503752",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "id": "a62a54db",
    "metadata": {},
    "outputs": [
@@ -1264,13 +1264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-tweedie-nloglik@1.5:1121.95791+28.99751\ttest-tweedie-nloglik@1.5:1121.95260+115.99175\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0]\ttrain-tweedie-nloglik@1.5:1121.95791+28.99751\ttest-tweedie-nloglik@1.5:1121.95260+115.99175\n",
       "[50]\ttrain-tweedie-nloglik@1.5:683.18844+17.58612\ttest-tweedie-nloglik@1.5:683.54164+70.56789\n",
       "[100]\ttrain-tweedie-nloglik@1.5:419.04124+10.68372\ttest-tweedie-nloglik@1.5:421.42694+42.87675\n",
       "[150]\ttrain-tweedie-nloglik@1.5:261.87141+6.49475\ttest-tweedie-nloglik@1.5:268.03010+27.42385\n",
@@ -1282,7 +1276,7 @@
       "[450]\ttrain-tweedie-nloglik@1.5:65.74262+1.08000\ttest-tweedie-nloglik@1.5:81.98519+6.89280\n",
       "[500]\ttrain-tweedie-nloglik@1.5:63.40183+1.05846\ttest-tweedie-nloglik@1.5:80.99794+6.71322\n",
       "[550]\ttrain-tweedie-nloglik@1.5:61.81109+1.05311\ttest-tweedie-nloglik@1.5:80.92476+6.76640\n",
-      "[579]\ttrain-tweedie-nloglik@1.5:61.07176+1.03982\ttest-tweedie-nloglik@1.5:81.06787+6.86048\n",
+      "[578]\ttrain-tweedie-nloglik@1.5:61.09981+1.03420\ttest-tweedie-nloglik@1.5:81.07532+6.84975\n",
       "Best num_boost_round from CV: 530\n"
      ]
     }
@@ -1330,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "8e86a554",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "id": "a3c6f35e",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "26292d36",
    "metadata": {},
    "outputs": [
@@ -1390,11 +1384,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training Data Metrics:\n",
       "Top Lift: 4.4395\n",
       "Gini: 0.7530\n",
       "RMSE: 1711.57\n",
       "MAE: 697.50\n",
-      "Tweedie Deviance: 87.47\n"
+      "Tweedie Deviance: 86.80\n"
      ]
     },
     {
@@ -1442,7 +1437,7 @@
     "mae = me.mae()\n",
     "tweedie_dev = mean_tweedie_deviance(\n",
     "    y_true=y,\n",
-    "    y_pred=y_pred,\n",
+    "    y_pred=train_pred,\n",
     "    power=1.5    # same as model.tweedie_variance_power\n",
     ")\n",
     "\n",
@@ -1515,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "d4cbcf83",
    "metadata": {},
    "outputs": [],
@@ -1540,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e06a7375",
    "metadata": {},
    "outputs": [
@@ -1548,11 +1543,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Validation Data Metrics:\n",
       "Top Lift: 1.9809\n",
       "Gini: 0.4901\n",
       "RMSE: 1873.64\n",
       "MAE: 762.71\n",
-      "Tweedie Deviance: 87.47\n"
+      "Tweedie Deviance: 114.14\n"
      ]
     },
     {
@@ -1599,8 +1595,8 @@
     "rmse = me.rmse()\n",
     "mae = me.mae()\n",
     "tweedie_dev = mean_tweedie_deviance(\n",
-    "    y_true=y,\n",
-    "    y_pred=y_pred,\n",
+    "    y_true=y_val,\n",
+    "    y_pred=val_pred,\n",
     "    power=1.5    # same as model.tweedie_variance_power\n",
     ")\n",
     "\n",
@@ -1632,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "6faaf52c",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1744,7 @@
        "11       veh_body_grouped   748.940247"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "id": "3053e279",
    "metadata": {},
    "outputs": [],
@@ -1792,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "693e3b0b",
    "metadata": {},
    "outputs": [],
@@ -1805,6 +1801,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6964b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400.0799428781313 647.9213244493943\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantiles = df['pred_per_exposure'].quantile([0.33, 0.66])\n",
+    "q33 = quantiles.iloc[0]\n",
+    "q66 = quantiles.iloc[1]\n",
+    "print(q33, q66)\n",
+    "\n",
+    "# save quantiles to a json file\n",
+    "quantile_dict = {\n",
+    "    \"q33\": q33,\n",
+    "    \"q66\": q66\n",
+    "}\n",
+    "\n",
+    "# Save quantiles to a json file\n",
+    "with open(\"../backend/models/freq_sev_xgboost/risk_quantiles.json\", 'w') as f:\n",
+    "    json.dump(quantile_dict, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f5f72dc9",
    "metadata": {},
@@ -1814,10 +1841,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "40ce0c79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['models/freq_sev_xgboost/kmeans_purepremium.pkl']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kmeans = KMeans(n_clusters=3, random_state=42)\n",
     "df[\"risk_cluster\"] = kmeans.fit_predict(\n",
@@ -1828,7 +1866,10 @@
     "cluster_order = cluster_means.sort_values().index\n",
     "\n",
     "mapping = {old:new for new, old in enumerate(cluster_order)}\n",
-    "df[\"risk_cluster\"] = df[\"risk_cluster\"].map(mapping)"
+    "df[\"risk_cluster\"] = df[\"risk_cluster\"].map(mapping)\n",
+    "\n",
+    "# Save the k-means model\n",
+    "joblib.dump(kmeans, \"models/freq_sev_xgboost/kmeans_clusters.pkl\")"
    ]
   },
   {
@@ -2012,8 +2053,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Save the trained RandomForestRegressor\n",
-    "joblib.dump(model, \"../backend/models/freq_sev_xgboost/rf_model.pkl\")\n",
+    "# 1) Save the trained model\n",
+    "joblib.dump(model, \"../backend/models/freq_sev_xgboost/model.pkl\")\n",
     "\n",
     "# 2) Save the exact feature column order used to fit the model\n",
     "feature_columns = list(X_val.columns)  # if you trained with a DataFrame\n",
@@ -2032,7 +2073,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2046,7 +2087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
